--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -73,6 +73,7 @@ ul, ol {
 a {
     color: var(--primary);
     text-decoration: none;
+    -webkit-tap-highlight-color: transparent;
 }
 
 button, input, textarea, select {
