--- a/src/widgets/ContextMenu/ui/ContextMenu.module.scss
+++ b/src/widgets/ContextMenu/ui/ContextMenu.module.scss
@@ -6,6 +6,7 @@
     z-index: 1000;
     min-width: 150px;
     overflow: hidden;
+    -webkit-tap-highlight-color: transparent;
 
     &__item {
         display: block;
